--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+autopilot-qt (1.4~0ubports0) xenial; urgency=medium
+
+  * Import to UBports
+
+-- Florian Leeber <florian@ubports.com> Sun, 02 Jun 2019 20:45:06 +0300
+
 autopilot-qt (1.4+15.10.20150825-0ubuntu1) wily; urgency=medium
 
   [ Christopher Lee ]
